--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@livechat/angular-widget": "^0.2.2",
     "core-js": "^2.5.4",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
